Alteração das querys

--- a/WebContent/People.html
+++ b/WebContent/People.html
@@ -5,7 +5,7 @@
 <title>People</title>
 </head>
 <body>
-<form method="post" action="/FTTPEOPLE/people">
+<form method="post" action="people">
 <fieldset>
     <legend>People</legend>
 		<p>    
